--- a/mysql-config/my.cnf
+++ b/mysql-config/my.cnf
@@ -37,7 +37,8 @@ read_buffer_size = 2M
 read_rnd_buffer_size = 8M
 myisam_sort_buffer_size = 8M
 thread_cache_size = 8
-query_cache_size = 32M
+# Query cache disabled in MySQL 8.0
+# query_cache_size = 32M
 tmp_table_size = 32M
 max_heap_table_size = 32M
 
@@ -49,7 +50,7 @@ innodb_lock_wait_timeout = 50
 
 # Binary Log
 log_bin = mysql-bin
-expire_logs_days = 10
+binlog_expire_logs_seconds = 864000
 max_binlog_size = 100M
 
 # Character Set
@@ -59,8 +60,8 @@ collation-server = utf8mb4_unicode_ci
 # Timezone
 default-time-zone = '+00:00'
 
-# SQL Mode
-sql_mode = STRICT_TRANS_TABLES,NO_ZERO_DATE,NO_ZERO_IN_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION
+# SQL Mode (MySQL 8.0 compatible)
+sql_mode = STRICT_TRANS_TABLES,NO_ZERO_DATE,NO_ZERO_IN_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION
 
 [mysql]
 default-character-set = utf8mb4
