--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,6 +88,16 @@ services:
     networks:
       - monitoring
     entrypoint: ["sleep", "infinity"]
+    
+  # K6 metrics proxy service
+  k6-metrics:
+    image: prom/pushgateway:latest
+    container_name: k6-metrics-proxy
+    ports:
+      - "9091:9091"
+    networks:
+      - monitoring
+    restart: unless-stopped
 
   setup:
     build: .
